Resolves: tdf#147292 the area of the tooltip is wrong

gen happens to make use of the current mouse point so it gets shown
anyway which gtk uses the designated area which isn't in the expected
units or screen relative positions

Change-Id: I11fdb09ad4ce2965d2f2e27fb1427c9d93de7a99
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130385
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>